--- a/service/service-edu/src/main/resources/application.properties
+++ b/service/service-edu/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.application.name=service-edu
 spring.profiles.active=dev
 # 配置mysql数据库
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://139.129.119.108:3308/guli?serverTimezone=GMT%2B8
+spring.datasource.url=jdbc:mysql://ip:3308/guli?serverTimezone=GMT%2B8
 spring.datasource.username=root
 spring.datasource.password=123456
 # 配置sql输出日志
