讲师模块分页条件查询、添加和修改接口以及统一异常处理

--- a/common/service-base/pom.xml
+++ b/common/service-base/pom.xml
@@ -11,5 +11,12 @@
 
     <artifactId>service-base</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.sunshine</groupId>
+            <artifactId>common-utils</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
