--- a/service/service-edu/src/main/resources/application.properties
+++ b/service/service-edu/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.url=jdbc:mysql://ip:3308/guli?serverTimezone=GMT%2B8
 spring.datasource.username=root
 spring.datasource.password=123456
 # 配置sql输出日志
-mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+#mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 #返回json的全局时间格式
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
